# DGCI19

./: .gitignore  .gitmodules  README.md  digital-curvature-boundary-correction.tex
Other Flows/flow-b3-r3/: Ball.eps  Ball.txt  Ellipse.eps  Ellipse.txt  Flower.eps  Flower.txt  Heptagon.eps  Heptagon.txt  Pentagon.eps  Pentagon.txt  Square.eps  Square.txt  Triangle.eps  Triangle.txt
Other Flows/flow-b5-ls2/: Ball.eps  Ball.txt  Ellipse.eps  Ellipse.txt  Flower.eps  Flower.txt  Heptagon.eps  Heptagon.txt  Pentagon.eps  Pentagon.txt  Square.eps  Square.txt  Triangle.eps  Triangle.txt
Other Flows/flow-b5-ls3/: Ball.eps  Ball.txt  Ellipse.eps  Ellipse.txt  Flower.eps  Flower.txt  Heptagon.eps  Heptagon.txt  Pentagon.eps  Pentagon.txt  Square.eps  Square.txt  Triangle.eps  Triangle.txt
Other Flows/flow-b5-ls4/: Ball.eps  Ball.txt  Ellipse.eps  Ellipse.txt  Flower.eps  Flower.txt  Heptagon.eps  Heptagon.txt  Pentagon.eps  Pentagon.txt  Square.eps  Square.txt  (+2 more)
Paper/: .gitignore  bibliography.bib  digital-curvature-boundary-correction.aux  digital-curvature-boundary-correction.bbl  digital-curvature-boundary-correction.blg  digital-curvature-boundary-correction.tex
code/: CMakeLists.txt  setUp.sh
code/include/: MockDistribution.h  utils.h
code/include/Application/model/instance/: GeneralInstance.h
code/include/Application/modes/: Interactive.h
code/include/Illustration/: AroundBoundaryReasoning.h  AroundBoundaryReasoning.hpp  Flow.h  Flow.hpp  OneImageFlow.h
code/scripts/: clone-repos.sh  make-ext-project.sh
code/src/: illustration.cpp  main.cpp  utils.cpp
code/src/Application/: utils.cpp
code/src/Application/modes/: Interactive.cpp
code/src/Illustration/: AroundBoundaryReasoning.cpp  Flow.cpp  OneImageFlow.cpp
images/: opt-regions.eps  qbo_1D_naive_solution_noneigh.eps  qbo_1D_naive_solution_noneigh_updated.eps
(+541 files in other folders)
